Reverting to Java 11